# python-project-lvl3

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
page_loader/: document.py  engine.py  getters.py  logger.py  logging.py  savers.py  storage.py
page_loader/script/: page_loader.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: alekorn-github-io-alekorn-tests-page1.html
tests/fixtures/alekorn-github-io-alekorn-tests-page1_files/: css-main.css
