[tool.poetry]
name = "alekorn-page-loader"
version = "0.1.0"
description = ""
authors = ["alekorn <entkorn@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

