[tool.poetry]
name = "alekorn-page-loader"
version = "0.3.0"
description = ""
authors = ["alekorn <entkorn@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
page-loader = "page_loader.script.page_loader:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

